--- a/rankings.ipynb
+++ b/rankings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,22 +13,473 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My league's scoring criteria\n",
-    "\n",
     "Runs Scored (R)\n",
     "Home Runs (HR)\n",
     "Runs Batted In (RBI)\n",
     "Stolen Bases (SB)\n",
-    "Batting Average (AVG)\n",
-    "On Base plus Slugging Pct (OPS)\n",
+    "On Base Pct (OBP)\n",
+    "Slugging Pct (SLG)\n",
     "\n",
-    "Pitching\n",
-    "Strikeouts (K)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hitting = pd.read_csv('data/hitting_0228.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PLAYER</th>\n",
+       "      <th>fantasy_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>18FernandoF Tatis Jr.Tatis Jr.SS18‌‌‌</td>\n",
+       "      <td>4.529974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5JoseJ RamírezRamirez3B5‌‌‌</td>\n",
+       "      <td>4.499550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2FreddieF FreemanFreeman1B2‌‌‌</td>\n",
+       "      <td>4.421296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>10JoseJ AbreuAbreu1B10‌‌‌</td>\n",
+       "      <td>4.349645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3MarcellM OzunaOzunaDH3‌‌‌</td>\n",
+       "      <td>4.291313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>135</td>\n",
+       "      <td>136VictorV RoblesRoblesCF136‌‌‌</td>\n",
+       "      <td>1.996384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>136</td>\n",
+       "      <td>137MarwinM GonzalezGonzalez3B137‌‌‌</td>\n",
+       "      <td>1.932162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>129</td>\n",
+       "      <td>130AvisailA GarcíaGarciaCF130‌‌‌</td>\n",
+       "      <td>1.923389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>134</td>\n",
+       "      <td>135ErikE GonzálezGonzalezSS135‌‌‌</td>\n",
+       "      <td>1.864495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>141</td>\n",
+       "      <td>142NickyN LopezLopez2B142‌‌‌</td>\n",
+       "      <td>1.522646</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>142 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    PLAYER  fantasy_score\n",
+       "17   18FernandoF Tatis Jr.Tatis Jr.SS18‌‌‌       4.529974\n",
+       "4              5JoseJ RamírezRamirez3B5‌‌‌       4.499550\n",
+       "1           2FreddieF FreemanFreeman1B2‌‌‌       4.421296\n",
+       "9                10JoseJ AbreuAbreu1B10‌‌‌       4.349645\n",
+       "2               3MarcellM OzunaOzunaDH3‌‌‌       4.291313\n",
+       "..                                     ...            ...\n",
+       "135        136VictorV RoblesRoblesCF136‌‌‌       1.996384\n",
+       "136    137MarwinM GonzalezGonzalez3B137‌‌‌       1.932162\n",
+       "129       130AvisailA GarcíaGarciaCF130‌‌‌       1.923389\n",
+       "134      135ErikE GonzálezGonzalezSS135‌‌‌       1.864495\n",
+       "141           142NickyN LopezLopez2B142‌‌‌       1.522646\n",
+       "\n",
+       "[142 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hitting['fantasy_score'] = hitting['R']/hitting['R'].max() +\\\n",
+    "hitting['HR']/hitting['HR'].max() +\\\n",
+    "hitting['RBI']/hitting['RBI'].max() +\\\n",
+    "hitting['SB']/hitting['SB'].max() +\\\n",
+    "hitting['OBP']/hitting['OBP'].max() +\\\n",
+    "hitting['SLG']/hitting['SLG'].max() \n",
+    "\n",
+    "hitting[['PLAYER','fantasy_score']].sort_values(by='fantasy_score',ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strikeouts (SO)\n",
     "Wins (W)\n",
-    "Saves (SV)\n",
     "Earned Run Average (ERA) †\n",
     "Walks plus Hits Per Innings Pitched (WHIP) †\n",
-    "Strikeouts per 9 Innings (K/9)"
+    "Strikeouts per 9 Innings (SO/9) †\n",
+    "Saves Plus Holds (SVHD) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['AVG', 'BB', 'CG', 'ER', 'G', 'GS', 'H', 'HB', 'HR', 'IP', 'L',\n",
+      "       'PLAYER', 'R', 'SHO', 'SO', 'SV', 'SVO', 'TEAM', 'W', 'WHIP',\n",
+      "       'caret-upcaret-downERA'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "pitching = pd.read_csv('data/pitching_0228.csv')\n",
+    "print(pitching.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PLAYER</th>\n",
+       "      <th>fantasy_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>26MaxM ScherzerScherzerP26‌‌‌</td>\n",
+       "      <td>2.815456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>39</td>\n",
+       "      <td>40MatthewM BoydBoydP40‌‌‌</td>\n",
+       "      <td>2.809478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1ShaneS BieberBieberP1‌‌‌</td>\n",
+       "      <td>2.797061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>12GerritG ColeColeP12‌‌‌</td>\n",
+       "      <td>2.680206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4YuY DarvishDarvishP4‌‌‌</td>\n",
+       "      <td>2.673313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>21</td>\n",
+       "      <td>22LanceL LynnLynnP22‌‌‌</td>\n",
+       "      <td>2.649451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>27</td>\n",
+       "      <td>28JoseJ BerríosBerriosP28‌‌‌</td>\n",
+       "      <td>2.619267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>35</td>\n",
+       "      <td>36AaronA CivaleCivaleP36‌‌‌</td>\n",
+       "      <td>2.612746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>20AaronA NolaNolaP20‌‌‌</td>\n",
+       "      <td>2.588606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>31</td>\n",
+       "      <td>32AndrewA HeaneyHeaneyP32‌‌‌</td>\n",
+       "      <td>2.521890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>37</td>\n",
+       "      <td>38KyleK GibsonGibsonP38‌‌‌</td>\n",
+       "      <td>2.497250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>24</td>\n",
+       "      <td>25FramberF ValdezValdezP25‌‌‌</td>\n",
+       "      <td>2.493368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>21DylanD BundyBundyP21‌‌‌</td>\n",
+       "      <td>2.492897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>19LuisL CastilloCastilloP19‌‌‌</td>\n",
+       "      <td>2.491338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>10ZachZ DaviesDaviesP10‌‌‌</td>\n",
+       "      <td>2.479778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23</td>\n",
+       "      <td>24LucasL GiolitoGiolitoP24‌‌‌</td>\n",
+       "      <td>2.476131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>17MarcoM GonzalesGonzalesP17‌‌‌</td>\n",
+       "      <td>2.466683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26</td>\n",
+       "      <td>27GermanG MárquezMarquezP27‌‌‌</td>\n",
+       "      <td>2.459776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>34</td>\n",
+       "      <td>35PatrickP CorbinCorbinP35‌‌‌</td>\n",
+       "      <td>2.436289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>32</td>\n",
+       "      <td>33AlecA MillsMillsP33‌‌‌</td>\n",
+       "      <td>2.408563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>38</td>\n",
+       "      <td>39JohnnyJ CuetoCuetoP39‌‌‌</td>\n",
+       "      <td>2.386397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>29</td>\n",
+       "      <td>30BradyB SingerSingerP30‌‌‌</td>\n",
+       "      <td>2.350290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>8Hyun JinH RyuRyuP8‌‌‌</td>\n",
+       "      <td>2.348542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>13KyleK HendricksHendricksP13‌‌‌</td>\n",
+       "      <td>2.340743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36</td>\n",
+       "      <td>37JonJ LesterLesterP37‌‌‌</td>\n",
+       "      <td>2.335398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>7JacobJ deGromdeGromP7‌‌‌</td>\n",
+       "      <td>2.318618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>9KentaK MaedaMaedaP9‌‌‌</td>\n",
+       "      <td>2.285829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33</td>\n",
+       "      <td>34MartinM PérezPerezP34‌‌‌</td>\n",
+       "      <td>2.276193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>14CarlosC CarrascoCarrascoP14‌‌‌</td>\n",
+       "      <td>2.251513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>28</td>\n",
+       "      <td>29ZackZ GreinkeGreinkeP29‌‌‌</td>\n",
+       "      <td>2.244522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22</td>\n",
+       "      <td>23AntonioA SenzatelaSenzatelaP23‌‌‌</td>\n",
+       "      <td>2.244434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>16BrandonB WoodruffWoodruffP16‌‌‌</td>\n",
+       "      <td>2.206020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>18AdamA WainwrightWainwrightP18‌‌‌</td>\n",
+       "      <td>2.205861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2TrevorT BauerBauerP2‌‌‌</td>\n",
+       "      <td>2.205681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>30</td>\n",
+       "      <td>31KyleK FreelandFreelandP31‌‌‌</td>\n",
+       "      <td>2.176813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>11ZacZ GallenGallenP11‌‌‌</td>\n",
+       "      <td>2.163974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>6ChrisC BassittBassittP6‌‌‌</td>\n",
+       "      <td>2.155955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>15ZackZ WheelerWheelerP15‌‌‌</td>\n",
+       "      <td>2.114821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3DallasD KeuchelKeuchelP3‌‌‌</td>\n",
+       "      <td>2.085102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5DinelsonD LametLametP5‌‌‌</td>\n",
+       "      <td>1.996541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 PLAYER  fantasy_score\n",
+       "25        26MaxM ScherzerScherzerP26‌‌‌       2.815456\n",
+       "39            40MatthewM BoydBoydP40‌‌‌       2.809478\n",
+       "0             1ShaneS BieberBieberP1‌‌‌       2.797061\n",
+       "11             12GerritG ColeColeP12‌‌‌       2.680206\n",
+       "3              4YuY DarvishDarvishP4‌‌‌       2.673313\n",
+       "21              22LanceL LynnLynnP22‌‌‌       2.649451\n",
+       "27         28JoseJ BerríosBerriosP28‌‌‌       2.619267\n",
+       "35          36AaronA CivaleCivaleP36‌‌‌       2.612746\n",
+       "19              20AaronA NolaNolaP20‌‌‌       2.588606\n",
+       "31         32AndrewA HeaneyHeaneyP32‌‌‌       2.521890\n",
+       "37           38KyleK GibsonGibsonP38‌‌‌       2.497250\n",
+       "24        25FramberF ValdezValdezP25‌‌‌       2.493368\n",
+       "20            21DylanD BundyBundyP21‌‌‌       2.492897\n",
+       "18       19LuisL CastilloCastilloP19‌‌‌       2.491338\n",
+       "9            10ZachZ DaviesDaviesP10‌‌‌       2.479778\n",
+       "23        24LucasL GiolitoGiolitoP24‌‌‌       2.476131\n",
+       "16      17MarcoM GonzalesGonzalesP17‌‌‌       2.466683\n",
+       "26       27GermanG MárquezMarquezP27‌‌‌       2.459776\n",
+       "34        35PatrickP CorbinCorbinP35‌‌‌       2.436289\n",
+       "32             33AlecA MillsMillsP33‌‌‌       2.408563\n",
+       "38           39JohnnyJ CuetoCuetoP39‌‌‌       2.386397\n",
+       "29          30BradyB SingerSingerP30‌‌‌       2.350290\n",
+       "7                8Hyun JinH RyuRyuP8‌‌‌       2.348542\n",
+       "12     13KyleK HendricksHendricksP13‌‌‌       2.340743\n",
+       "36            37JonJ LesterLesterP37‌‌‌       2.335398\n",
+       "6             7JacobJ deGromdeGromP7‌‌‌       2.318618\n",
+       "8               9KentaK MaedaMaedaP9‌‌‌       2.285829\n",
+       "33           34MartinM PérezPerezP34‌‌‌       2.276193\n",
+       "13     14CarlosC CarrascoCarrascoP14‌‌‌       2.251513\n",
+       "28         29ZackZ GreinkeGreinkeP29‌‌‌       2.244522\n",
+       "22  23AntonioA SenzatelaSenzatelaP23‌‌‌       2.244434\n",
+       "15    16BrandonB WoodruffWoodruffP16‌‌‌       2.206020\n",
+       "17   18AdamA WainwrightWainwrightP18‌‌‌       2.205861\n",
+       "1              2TrevorT BauerBauerP2‌‌‌       2.205681\n",
+       "30       31KyleK FreelandFreelandP31‌‌‌       2.176813\n",
+       "10            11ZacZ GallenGallenP11‌‌‌       2.163974\n",
+       "5           6ChrisC BassittBassittP6‌‌‌       2.155955\n",
+       "14         15ZackZ WheelerWheelerP15‌‌‌       2.114821\n",
+       "2          3DallasD KeuchelKeuchelP3‌‌‌       2.085102\n",
+       "4            5DinelsonD LametLametP5‌‌‌       1.996541"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pitching['fantasy_score'] = pitching['SO']/pitching['SO'].max() +\\\n",
+    "pitching['W']/pitching['W'].max() +\\\n",
+    "pitching['caret-upcaret-downERA']/pitching['caret-upcaret-downERA'].max() +\\\n",
+    "pitching['WHIP']/pitching['WHIP'].max() \n",
+    "\n",
+    "pitching[['PLAYER','fantasy_score']].sort_values(by='fantasy_score',ascending=False)"
    ]
   },
   {
