--- a/mlb_scrapper.ipynb
+++ b/mlb_scrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,19 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#?playerPool=ALL <- need to add this flag\n",
+    "expanded = True\n",
+    "url = 'https://www.mlb.com/stats/pitching/2020'\n",
+    "max_pages = 31\n",
+    "file_name = 'pitching_0307-expanded'\n",
     "\n",
-    "#url = 'https://www.mlb.com/stats/pitching/2020/'\n",
-    "#max_pages =2\n",
-    "#file_name = 'pitching_0228'\n",
-    "\n",
-    "url = 'https://www.mlb.com/stats/batting/2020/'\n",
-    "max_pages = 6\n",
-    "file_name = 'hitting_0228'\n",
+    "#expanded = False\n",
+    "#url = 'https://www.mlb.com/stats/2020'\n",
+    "#max_pages = 26\n",
+    "#file_name = 'hitting_0307-1'\n",
     "\n",
     "\n",
     "headers = {'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.64 Safari/537.11',\n",
@@ -39,19 +39,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.mlb.com/stats/batting/2020/\n",
-      "https://www.mlb.com/stats/batting/2020/?page=2\n",
-      "https://www.mlb.com/stats/batting/2020/?page=3\n",
-      "https://www.mlb.com/stats/batting/2020/?page=4\n",
-      "https://www.mlb.com/stats/batting/2020/?page=5\n",
-      "https://www.mlb.com/stats/batting/2020/?page=6\n"
+      "https://www.mlb.com/stats/pitching/2020?expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=2&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=3&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=4&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=5&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=6&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=7&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=8&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=9&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=10&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=11&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=12&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=13&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=14&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=15&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=16&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=17&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=18&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=19&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=20&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=21&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=22&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=23&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=24&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=25&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=26&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=27&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=28&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=29&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=30&expanded=true&playerPool=ALL\n",
+      "https://www.mlb.com/stats/pitching/2020?page=31&expanded=true&playerPool=ALL\n"
      ]
     }
    ],
@@ -60,9 +85,20 @@
     "\n",
     "for page_num in range(1,max_pages+1):\n",
     "    page_url = url\n",
-    "    if page_num >1:\n",
-    "        page_url = url+ '?page=' + str(page_num)\n",
+    "    if not expanded and page_num == 1:\n",
+    "        page_url = url+ '?playerPool=ALL'\n",
+    "        \n",
+    "    elif  expanded and page_num == 1: \n",
+    "        page_url = url+ '?expanded=true&playerPool=ALL'\n",
+    "        \n",
+    "    elif not expanded and page_num > 1:\n",
+    "        page_url = url+ '?page=' + str(page_num) + '&playerPool=ALL'\n",
+    "        \n",
+    "    elif expanded and page_num > 1:\n",
+    "        page_url = url+ '?page=' + str(page_num) + '&expanded=true&playerPool=ALL'\n",
+    "        \n",
     "    print(page_url)\n",
+    "    \n",
     "    page = requests.get(page_url, headers=headers)\n",
     "    time.sleep(1)\n",
     "    # for getting the header from the HTML file \n",
@@ -100,12 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(735, 20) 735\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "    "
+    "result_df = pd.read_csv('data/'+file_name + '.csv')\n",
+    "print(result_df.shape,result_df['PLAYER'].nunique())"
    ]
   },
   {
